# CalcApp

./: .gitignore  CMakeLists.txt  Calc.qml  CalcButton.qml  Main.qml  README.md  SecretWindow.qml  calclogic.cpp  calclogic.h  main.cpp
